[package]
name = "farcaster-rs"
version = "0.1.0-pre.3"
description="A simple rust crate to interface & interact with the Farcaster.xyz contracts & APIs"
repository="https://github.com/TheLDB/farcaster-rs"
authors=["Landon Boles"]
license="MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", version="0.17.0" }
serde_json = { version = "1.0.85" }
reqwest = "0.11.12"
serde = "1.0.145"
chrono = "0.4"
jsonwebtoken = "8"
serde_cbor = "0.11.1"
