[package]
name = "farcaster-rs"
version = "0.1.0"
description="A simple rust crate to interface & interact with the Farcaster.xyz contracts & APIs"
repository="https://github.com/TheLDB/farcaster-rs"
authors=["Landon Boles"]
license="MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.1"

[dependencies.ethers]
git = "https://github.com/gakonst/ethers-rs"
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.reqwest]
version = "0.11.12"

[dependencies.serde]
version = "1.0"

[dependencies.chrono]
version = "0.4"
