[package]
name = "farcaster-rs"
version = "1.0.1"
description="A rust crate to interface & interact with the Farcaster.xyz contracts & APIs"
repository="https://github.com/TheLDB/farcaster-rs"
authors=["Landon Boles <ldb@erikboles.com>"]
license="MIT"
edition = "2021"

[dependencies]

[dependencies.hex]
version = "0.4.3"

[dependencies.base64]
version = "0.13.1"

[dependencies.ethers]
git = "https://github.com/gakonst/ethers-rs"
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.reqwest]
version = "0.11.12"

[dependencies.serde]
version = "1.0"

[dependencies.chrono]
version = "0.4"
